--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <meta charset="utf-8">
   <title>CASM</title>
-  <base href="C:/Program Files/Git/CASM/">
+  <base href="/CASM/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link rel="icon" type="image" href="CASM-NEGRO.png">
